# GroupG-Molekulardynamik

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  MolSim  README.md  cmake_install.cmake  compile.sh  run.sh
.github/workflows/: our_ci.yml
cmake/modules/: doxygen.cmake
input/: Assignment2.xml  Assignment3.xml  Assignment3_task2.xml  Assignment3_task4.xml  Assignment4_task2_1.xml  Assignment4_task2_2.xml  Assignment4_task3_1.xml  Assignment4_task3_2.xml  Assignment5_task1.xml  Assignment5_task3.xml  Assignment5_task4.xml  XMLFormat.xsd  checkpoint.txt  checkpointTest.txt  default10x10square.xml  default30x30square.xml  default50x50square.xml  default70x70square.xml  default90x90square.xml  drop_in_glass.xml  eingabe-sonne.txt  generated-input.txt  lc10x10square.xml  lc30x30square.xml  lc50x50square.xml  lc70x70square.xml  lc90x90square.xml  profiling.xml  test.xml
our_tests/: CMakeLists.txt  firsttest.cpp
src/: FileReader.cpp  FileReader.h  Lenard_Jones_Force.cpp  Lenard_Jones_Force.h  LogLevelConfig.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  Simulation.cpp  Simulation.h  inputFileManager.cpp  inputFileManager.h  inputFileMerger.cpp  inputFileMerger.h
src/Forces/: Force.h  GravitationalForce.cpp  GravitationalForce.h  Gravitational_Force.cpp  Gravitational_Force.h  Lenard_Jones_Force.cpp  Lenard_Jones_Force.h  Lennard_Jones_Force.cpp  Lennard_Jones_Force.h
src/ParticleContainers/: ParticleContainer.h  ParticleContainerLinkedCell.cpp  ParticleContainerLinkedCell.h  ParticleContainerOld.cpp  ParticleContainerOld.h
src/data/: CheckpointData.cpp  CheckpointData.h  Cuboid.cpp  Cuboid.h  Disc.cpp  Disc.h  MembraneData.cpp  MembraneData.h  OpenMPData.cpp  OpenMPData.h  Particle.cpp  Particle.h  SimData.cpp  SimData.h  Thermostat.cpp  Thermostat.h  ThermostatData.cpp  ThermostatData.h
src/forces/: Force.cpp  Force.h  Gravitational_Force.cpp  Gravitational_Force.h  Lennard_Jones_Force.cpp  Lennard_Jones_Force.h
src/io/input/: Assignment2.xml  FileReader.cpp  FileReader.h  XMLFormat.cpp  XMLFormat.h  XMLFormat.xsd  XMLReader.cpp  XMLReader.h
src/io/output/: CheckpointWriter.cpp  CheckpointWriter.h  ProfilingComponent.cpp  ProfilingComponent.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/outputWriter/: VTKWriter.cpp  VTKWriter.h
src/particlecontainers/: ParticleContainer.h  ParticleContainerLinkedCell.cpp  ParticleContainerLinkedCell.h  ParticleContainerOld.cpp  ParticleContainerOld.h
src/particlegen/: ParticleGen.cpp  ParticleGenerator.cpp  ParticleGenerator.h
src/thermostat/: Thermostat.cpp  Thermostat.h
src/utils/: MaxwellBoltzmannDistribution.h  NumericalUtils.h
tests/: CMakeLists.txt  test_output.csv  tests.cpp  xmltests.cpp
